--- a/service.html
+++ b/service.html
@@ -32,6 +32,7 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
 
+    <!-- header_start  -->
     <header>
         <div class="header-area ">
             <div class="header-top_area">
@@ -106,27 +107,21 @@
             </div>
         </div>
     </header>
+    <!-- header_start  -->
 
-    <!-- slider_area_start -->
-    <div class="slider_area">
-        <div class="single_slider slider_bg_1 d-flex align-items-center">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-5 col-md-6">
-                        <div class="slider_text">
-                            <h3>We Care <br> <span>Your Pets</span></h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit, sed do eiusmod.</p>
-                            <a href="contact.html" class="boxed-btn4">Contact Us</a>
-                        </div>
+    <!-- bradcam_area_start -->
+    <div class="bradcam_area breadcam_bg">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="bradcam_text text-center">
+                        <h3>Services</h3>
                     </div>
                 </div>
             </div>
-            <div class="dog_thumb d-none d-lg-block">
-                <img src="img/banner/dog.png" alt="">
-            </div>
         </div>
     </div>
-    <!-- slider_area_end -->
+    <!-- bradcam_area_end -->
 
     <!-- service_area_start  -->
     <div class="service_area">
@@ -183,81 +178,6 @@
         </div>
     </div>
     <!-- service_area_end -->
-
-    <!-- pet_care_area_start  -->
-    <div class="pet_care_area">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-5 col-md-6">
-                    <div class="pet_thumb">
-                        <img src="img/about/pet_care.png" alt="">
-                    </div>
-                </div>
-                <div class="col-lg-6 offset-lg-1 col-md-6">
-                    <div class="pet_info">
-                        <div class="section_title">
-                            <h3><span>We care your pet </span> <br>
-                                As you care</h3>
-                            <p>Lorem ipsum dolor sit , consectetur adipiscing elit, sed do <br> iusmod tempor incididunt ut labore et dolore magna aliqua. <br> Quis ipsum suspendisse ultrices gravida. Risus commodo <br>
-                                viverra maecenas accumsan.</p>
-                            <a href="about.html" class="boxed-btn3">About Us</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- pet_care_area_end  -->
-
-    <!-- adapt_area_start  -->
-    <div class="adapt_area">
-        <div class="container">
-            <div class="row justify-content-between align-items-center">
-                <div class="col-lg-5">
-                    <div class="adapt_help">
-                        <div class="section_title">
-                            <h3><span>We need your</span>
-                                help Adopt Us</h3>
-                            <p>Lorem ipsum dolor sit , consectetur adipiscing elit, sed do iusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices.</p>
-                            <a href="contact.html" class="boxed-btn3">Contact Us</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="adapt_about">
-                        <div class="row align-items-center">
-                            <div class="col-lg-6 col-md-6">
-                                <div class="single_adapt text-center">
-                                    <img src="img/adapt_icon/1.png" alt="">
-                                    <div class="adapt_content">
-                                        <h3 class="counter">452</h3>
-                                        <p>Pets Available</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-6 col-md-6">
-                                <div class="single_adapt text-center">
-                                    <img src="img/adapt_icon/3.png" alt="">
-                                    <div class="adapt_content">
-                                        <h3><span class="counter">52</span>+</h3>
-                                        <p>Pets Available</p>
-                                    </div>
-                                </div>
-                                <div class="single_adapt text-center">
-                                    <img src="img/adapt_icon/2.png" alt="">
-                                    <div class="adapt_content">
-                                        <h3><span class="counter">52</span>+</h3>
-                                        <p>Pets Available</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- adapt_area_end  -->
 
     <!-- testmonial_area_start  -->
     <div class="testmonial_area">
@@ -365,6 +285,7 @@
     </div>
     <!-- team_area_start  -->
 
+    <!-- contact_anipat_start  -->
     <div class="contact_anipat anipat_bg_1">
         <div class="container">
             <div class="row justify-content-center">
@@ -383,6 +304,7 @@
             </div>
         </div>
     </div>
+    <!-- contact_anipat_end  -->
 
     <!-- footer_start  -->
     <footer class="footer">
